package com.isep.ead.alert;

/**
 * Niveaux de sévérité d'une alerte de consommation.
 */
public enum   AlertLevel {
    INFO,
    WARNING,
    CRITICAL
}

