@startuml Smart_Energy_Manager

skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam shadowing false

' ══════════════════════════════
'           ENUMS
' ══════════════════════════════

enum AlertLevel {
  INFO
  WARNING
  CRITICAL
}

' ══════════════════════════════
'            USER
' ══════════════════════════════

class User {
  - String username
  - String password
  - String email
  + login(username: String, password: String): boolean
  + logout(): void
}

' ══════════════════════════════
'         ORGANIZATION
' ══════════════════════════════

class Organization {
  - String name
  - String owner
  - List<Building> buildings
  + addBuilding(b: Building): void
  + removeBuilding(b: Building): void
  + getBuildings(): List<Building>
  + getMostConsumingBuilding(): Building
  + getTotalCost(): double
}

' ══════════════════════════════
'    BUILDING (interface)
' ══════════════════════════════

interface Building {
  + getId(): int
  + getName(): String
  + getAddress(): String
  + getSurface(): double
  + getReadings(): List<Energy>
  + addReading(e: Energy): void
  + getTotalConsumption(): double
  + getEstimatedCost(): double
  + clone(): Building
}

' ══════════════════════════════
'   ACCOMMODATION (abstract)
'   — logements résidentiels —
' ══════════════════════════════

abstract class Accommodation {
  - int id
  - String name
  - String address
  - String owner
  - double surface
  - List<Energy> readings
  + getReadings(): List<Energy>
  + addReading(e: Energy): void
  + getTotalConsumption(): double
  + getEstimatedCost(): double
  + clone(): Building
}

class House {
  - int numberOfRooms
  - boolean hasGarden
  + getId(): int
  + getName(): String
  + getAddress(): String
  + getSurface(): double
}

class Apartment {
  - int floor
  - String residenceName
  + getId(): int
  + getName(): String
  + getAddress(): String
  + getSurface(): double
}

' ══════════════════════════════
'  AUTRES BÂTIMENTS (directs)
' ══════════════════════════════

class Office {
  - int id
  - String name
  - String address
  - double surface
  - String companyName
  - int numberOfEmployees
  - List<Energy> readings
  + getId(): int
  + getName(): String
  + getAddress(): String
  + getSurface(): double
  + getReadings(): List<Energy>
  + addReading(e: Energy): void
  + getTotalConsumption(): double
  + getEstimatedCost(): double
  + clone(): Building
}

class Shop {
  - int id
  - String name
  - String address
  - double surface
  - String activitySector
  - List<Energy> readings
  + getId(): int
  + getName(): String
  + getAddress(): String
  + getSurface(): double
  + getReadings(): List<Energy>
  + addReading(e: Energy): void
  + getTotalConsumption(): double
  + getEstimatedCost(): double
  + clone(): Building
}

class University {
  - int id
  - String name
  - String address
  - double surface
  - String institutionName
  - int numberOfStudents
  - List<Energy> readings
  + getId(): int
  + getName(): String
  + getAddress(): String
  + getSurface(): double
  + getReadings(): List<Energy>
  + addReading(e: Energy): void
  + getTotalConsumption(): double
  + getEstimatedCost(): double
  + clone(): Building
}

' ══════════════════════════════
'    ENERGY (abstract class)
' ══════════════════════════════

abstract class Energy {
  # int id
  # LocalDate date
  # LocalTime time
  # double quantity
  # double pricePerUnit
  + getEstimatedCost(): double
  + getType(): String
  + getDate(): LocalDate
  + getQuantity(): double
  + toString(): String
}

class Electricity {
  - boolean isOffPeak
  + getEstimatedCost(): double
  + getType(): String
}

class Water {
  - boolean isHotWater
  + getEstimatedCost(): double
  + getType(): String
}

class Gas {
  - String usage
  + getEstimatedCost(): double
  + getType(): String
}

class Climatisation {
  - double targetTemperature
  + getEstimatedCost(): double
  + getType(): String
}

class Solar {
  - double producedQuantity
  + getNetConsumption(): double
  + getEstimatedCost(): double
  + getType(): String
}

' ══════════════════════════════
'           ALERT
' ══════════════════════════════

class Alert {
  - String message
  - AlertLevel level
  - LocalDateTime triggeredAt
  - boolean isRead
  + markAsRead(): void
}

' ══════════════════════════════
'         DASHBOARD
' ══════════════════════════════

class Dashboard {
  - Organization organization
  + getDailyConsumption(): double
  + getMonthlyConsumption(): double
  + getAnnualConsumption(): double
  + getEstimatedCost(): double
  + getMostConsumingBuilding(): Building
  + getActiveAlerts(): List<Alert>
  + refresh(): void
}

' ══════════════════════════════
'       ENERGY ANALYZER
' ══════════════════════════════

class EnergyAnalyzer {
  + detectAnomalies(b: Building): List<Alert>
  + getDominantEnergyType(b: Building): String
  + estimateMonthlyBill(b: Building): double
  + compareBuildings(buildings: List<Building>): void
  + generateRecommendations(b: Building): List<String>
}

' ══════════════════════════════
'       IMPORT / EXPORT
' ══════════════════════════════

class CSVHandler {
  + importReadings(filePath: String): List<Energy>
  + exportReadings(readings: List<Energy>, filePath: String): void
}

class DataGenerator {
  + generateTestData(b: Building, days: int): List<Energy>
}

' ══════════════════════════════
'          WEATHER API
' ══════════════════════════════

class WeatherService {
  - String apiKey
  + getCurrentTemperature(location: String): double
  + getWeatherDescription(location: String): String
}

' ══════════════════════════════
'          RELATIONS
' ══════════════════════════════

' Implémentation de Building
Building <|.. Accommodation
Building <|.. Office
Building <|.. Shop
Building <|.. University

' Héritage Accommodation
Accommodation <|-- House
Accommodation <|-- Apartment

' Héritage Energy
Energy <|-- Electricity
Energy <|-- Water
Energy <|-- Gas
Energy <|-- Climatisation
Energy <|-- Solar

' Composition
Organization "1" *-- "0..*" Building : contient
Building     "1" *-- "0..*" Energy   : enregistre
Building     "1" *-- "0..*" Alert    : génère

' Associations
Organization "1" --> "1" User        : géré par
Dashboard    "1" --> "1" Organization : surveille

' Dépendances
EnergyAnalyzer ..> Building      : analyse
EnergyAnalyzer ..> Alert         : crée
EnergyAnalyzer ..> WeatherService : consulte

Dashboard      ..> EnergyAnalyzer : utilise

CSVHandler     ..> Energy         : importe/exporte
DataGenerator  ..> Energy         : génère

@enduml